--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,13 +14,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LInkedinApp"
         tools:targetApi="31">
+<!--        <activity-->
+<!--            android:name=".PostAdapter"-->
+<!--            android:exported="false" />-->
+<!--        <activity-->
+<!--            android:name=".itempost"-->
+<!--            android:exported="false" />-->
         <activity
-            android:name=".itempost"
+            android:name=".Linkedinpage"
             android:exported="false" />
-        <activity
-            android:name=".MainActivity2"
-            android:exported="false" />
-
         <activity
             android:name=".SignUpActivity"
             android:exported="false" />
@@ -29,6 +33,7 @@
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
